Closed Bug 1313375 Opened 8 years ago Closed 8 years ago

Fix nsDeviceContext::IsPrinterSurface() to not fail between BeginPage()/EndPage() calls

Categories

(Core :: Graphics, defect)

Unspecified
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

Details

Attachments

(1 file)

On Mac, nsDeviceContext::IsPrinterSurface fails when called between BeginPage()/EndPage() calls.
Attached patch patchSplinter Review
Attachment #8805113 - Flags: review?(mstange)
Attachment #8805113 - Flags: review?(mstange) → review+
Pushed by jwatt@jwatt.org:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e84c02971f37
Fix nsDeviceContext::IsPrinterSurface() to not fail between BeginPage()/EndPage() calls. r=mstange
https://hg.mozilla.org/mozilla-central/rev/e84c02971f37
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: